# IronMUD-public

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  build.rs  install.sh  ironmud-sync.sh  progress.md  rust-toolchain.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
area-design-plans/: saint-cendre.md
assets/: README.md  banner.txt  ironmud.tin
docs/: COMBAT_SYSTEM.md  admin-guide.md  builder-guide.md  character_creator.md  getting-started.md  import-guide.md  installation.md  medical-system-design.md  player-guide.md  sector7-followup.md  transportation-design.md  unicode-support.md
docs/builder/: README.md  achievements.md  areas.md  classes.md  custom-skills.md  dg-scripts.md  dialogue-trees.md  gardening.md  items.md  languages.md  mobiles.md  mutant-progression.md  properties.md  quests.md  recipes.md  replicant-progression.md  rooms.md  socials.md  transports.md  triggers.md  vampire-progression.md  weapon-balance.md
docs/design/: README.md  (+5 more)
imports/: bundle-example-areas.vnum-map.json
mcp-server/: README.md  package-lock.json  package.json
scripts/: README.md  commands.json  install-claude-skill.sh
src/: README.md  aging.rs  chat.rs  claude.rs  completion.rs  control.rs  corpse.rs  db.rs  dialogue_edit.rs  discord.rs  game.rs  gemini.rs  lib.rs  main.rs  matrix.rs  morality.rs  necromancy.rs  ratelimit.rs  readline.rs  settings.rs  telnet.rs  throttle.rs
tests/: README.md  achievements.rs  dialogue.rs  import_circle.rs  import_ranvier.rs  import_tba.rs  items_affects.rs  languages.rs  map.rs  quests.rs  server.rs
(+610 files in other folders)
